maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:38: error: Unmatched closing brace '}' ignored here
}
^