maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run(){
  while(!estFaceMur()){
    avance()
  }
  gauche()
  
  def keepHandOnSideWall(): Boolean={
    droite()
    if(estFaceMur()){ 
      gauche()
      return true}
    else{
      gauche()
      return false}
  }
  
  while(!estSurBiscuit()){
    var pos=(getX(),getY())
    if(pos==(getX(),getY())){
       while(!estFaceMur())
      	avance()
  			}
    }
    if(keepHandOnSideWall()){
      if(!estFaceMur()){avance()}
      else{gauche()}
    }
    else{droite()
         avance()
         pos=(getX(),getY())
        }
    
  }
  prendBiscuit()
}